# ai-agent

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  build.sh  generate_icns.sh
.cargo/: config.toml
assets/: logo.icns
src/: app.rs  assets.rs  main.rs  tray.rs
src/api/: bilibili.rs
src/components/: animated_avatar.rs  icons.rs  mod.rs
src/state/: app_state.rs
src/utils/: mod.rs
src/views/: home.rs  mod.rs  settings.rs  video_list.rs
