[package]
name = "my-gpui-app"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = "0.2"
gpui-component = "0.4.0-preview1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tray-icon = "0.19"
image = "0.25"
rust-embed = { version = "8.0", features = ["debug-embed"] }
qrcode = "0.13"
futures = "0.3"

[build-dependencies]
winresource = "0.1"

[[bin]]
name = "my-gpui-app"
path = "src/main.rs"
