[package]
name = "my-gpui-app"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.4.0-preview1"
gpui_http_client = "0.2.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tray-icon = "0.19"
image = { version = "0.25", features = ["webp", "gif"] }
rust-embed = { version = "8.0", features = ["debug-embed"] }
qrcode = "0.13"
futures = "0.3"
reqwest = { version = "0.12", features = ["cookies", "json", "blocking"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "macros"] }
sha2 = "0.10"
webp-animation = "0.9"
once_cell = "1.19"

[build-dependencies]
winresource = "0.1"

[[bin]]
name = "my-gpui-app"
path = "src/main.rs"

# macOS 应用程序包配置
[package.metadata.bundle]
name = "AI Agent"
identifier = "com.ai-agent.app"
icon = ["assets/logo.icns"]
version = "0.1.0"
short_description = "AI Agent Application"
copyright = "Copyright (c) 2024 AI Agent"
category = "Developer Tool"
osx_minimum_system_version = "10.13"
